--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,13 @@
 Changelog
 =========
 
-1.0
----
+1.0.1
+-----
+
+- Added spanish internationalization [frapell]
+
+1.0.0
+-----
 
 - Added a content rule action that will use an account created using collective.twitter.accounts [frapell]
 
